hphp/hack/test/typecheck/class_refinements/subtype.php.exp
File "subtype.php", line 23, characters 25-58:
Type refinements cannot appear on the right-hand side of a type alias. (NastCheck[3101])
File "subtype.php", line 36, characters 3-12:
A `where` type constraint is violated here (Typing[4323])
  File "subtype.php", line 25, characters 10-19:
  This is the method with `where` type constraints
  File "subtype.php", line 36, characters 39-64:
  Expected a class with `{type T = string}`
  File "subtype.php", line 25, characters 50-51:
    via this generic `Tb`
  File "subtype.php", line 36, characters 14-36:
  But got `Box with { type T = int }`
  File "subtype.php", line 25, characters 44-45:
    via this generic `Ta`
  File "subtype.php", line 36, characters 58-63:
  This `as` or `=` refinement constraint is violated
  File "subtype.php", line 36, characters 58-63:
  Expected `string`
  File "subtype.php", line 36, characters 33-35:
  But got `int`
File "subtype.php", line 36, characters 3-12:
A `where` type constraint is violated here (Typing[4323])
  File "subtype.php", line 25, characters 10-19:
  This is the method with `where` type constraints
  File "subtype.php", line 36, characters 39-64:
  Expected a class with `{type T = string}`
  File "subtype.php", line 25, characters 50-51:
    via this generic `Tb`
  File "subtype.php", line 36, characters 14-36:
  But got `Box with { type T = int }`
  File "subtype.php", line 25, characters 44-45:
    via this generic `Ta`
  File "subtype.php", line 36, characters 58-63:
  This `super` refinement constraint is violated
  File "subtype.php", line 36, characters 33-35:
  Expected `int`
  File "subtype.php", line 36, characters 58-63:
  But got `string`
File "subtype.php", line 37, characters 3-12:
A `where` type constraint is violated here (Typing[4323])
  File "subtype.php", line 25, characters 10-19:
  This is the method with `where` type constraints
  File "subtype.php", line 37, characters 19-44:
  Expected a class with `{type T = string}`
  File "subtype.php", line 25, characters 50-51:
    via this generic `Tb`
  File "subtype.php", line 37, characters 14-16:
  But got `Box`
  File "subtype.php", line 25, characters 44-45:
    via this generic `Ta`
File "subtype.php", line 37, characters 3-12:
A `where` type constraint is violated here (Typing[4323])
  File "subtype.php", line 25, characters 10-19:
  This is the method with `where` type constraints
  File "subtype.php", line 37, characters 19-44:
  Expected a class with `{type T = string}`
  File "subtype.php", line 25, characters 50-51:
    via this generic `Tb`
  File "subtype.php", line 37, characters 14-16:
  But got `Box`
  File "subtype.php", line 25, characters 44-45:
    via this generic `Ta`
  File "subtype.php", line 37, characters 38-43:
  This `as` or `=` refinement constraint is violated
  File "subtype.php", line 37, characters 38-43:
  Expected `string`
  File "subtype.php", line 11, characters 28-32:
  But got `mixed`
File "subtype.php", line 37, characters 3-12:
A `where` type constraint is violated here (Typing[4323])
  File "subtype.php", line 25, characters 10-19:
  This is the method with `where` type constraints
  File "subtype.php", line 37, characters 19-44:
  Expected a class with `{type T = string}`
  File "subtype.php", line 25, characters 50-51:
    via this generic `Tb`
  File "subtype.php", line 37, characters 14-16:
  But got `Box`
  File "subtype.php", line 25, characters 44-45:
    via this generic `Ta`
  File "subtype.php", line 37, characters 38-43:
  This `super` refinement constraint is violated
  File "subtype.php", line 11, characters 23-23:
  Expected `nothing` because the type constant T lacks a constraint
  File "subtype.php", line 37, characters 38-43:
  But got `string`
File "subtype.php", line 38, characters 3-12:
A `where` type constraint is violated here (Typing[4323])
  File "subtype.php", line 25, characters 10-19:
  This is the method with `where` type constraints
  File "subtype.php", line 38, characters 22-44:
  Expected a class with `{type T = int}`
  File "subtype.php", line 25, characters 50-51:
    via this generic `Tb`
  File "subtype.php", line 38, characters 14-19:
  But got `StrBox`
  File "subtype.php", line 25, characters 44-45:
    via this generic `Ta`
  File "subtype.php", line 38, characters 41-43:
  This `as` or `=` refinement constraint is violated
  File "subtype.php", line 38, characters 41-43:
  Expected `int`
  File "subtype.php", line 19, characters 18-23:
  But got `string`
File "subtype.php", line 38, characters 3-12:
A `where` type constraint is violated here (Typing[4323])
  File "subtype.php", line 25, characters 10-19:
  This is the method with `where` type constraints
  File "subtype.php", line 38, characters 22-44:
  Expected a class with `{type T = int}`
  File "subtype.php", line 25, characters 50-51:
    via this generic `Tb`
  File "subtype.php", line 38, characters 14-19:
  But got `StrBox`
  File "subtype.php", line 25, characters 44-45:
    via this generic `Ta`
  File "subtype.php", line 38, characters 41-43:
  This `super` refinement constraint is violated
  File "subtype.php", line 19, characters 18-23:
  Expected `string`
  File "subtype.php", line 38, characters 41-43:
  But got `int`
File "subtype.php", line 39, characters 3-12:
A `where` type constraint is violated here (Typing[4323])
  File "subtype.php", line 25, characters 10-19:
  This is the method with `where` type constraints
  File "subtype.php", line 39, characters 30-43:
  Expected a class with `{type T super C3 as C2}`
  File "subtype.php", line 25, characters 50-51:
    via this generic `Tb`
  File "subtype.php", line 39, characters 14-27:
  But got `Box with { type T as C2 super C4 }`
  File "subtype.php", line 25, characters 44-45:
    via this generic `Ta`
  File "subtype.php", line 23, characters 48-50:
  This `super` refinement constraint is violated
  File "subtype.php", line 39, characters 21-22:
  Expected `C4`
  File "subtype.php", line 23, characters 48-50:
    via this generic `Tlo`
  File "subtype.php", line 39, characters 37-38:
  But got `C3`
  File "subtype.php", line 23, characters 48-50:
    via this generic `Tlo`
